--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-responsive": "^10.0.1",
     "react-select": "^5.10.1",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.1.0",
